New, nicer cover image in readme

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ vscode pause to rerun.*
 
 # Not really working or deprecated, not interesting for a public repo
 AI whisper transcription.*
+*ctrl+f17*
 Archive
